Flashback working. Showing last played time and location for songs.